# hybridcipher-public

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  rustfmt.toml
apps/desktop/: README.md  package-lock.json  package.json
apps/desktop/architecture/: README.md
apps/desktop/feedback-api/: README.md  package.json  server.js
apps/desktop/macos-fileprovider/: README.md
apps/desktop/release-notes/: releases.json
apps/desktop/src/: app-tauri.js  app-update-methods.js  app.js  auto-mount-utils.js  auto-mount-utils.test.js  beta-ux-utils.js  beta-ux-utils.test.js  cli-commands.js  index.html  legal-utils.js  legal-utils.test.js  release-notes-utils.js  release-notes-utils.test.js  security-utils.js  styles.css  terminal-utils.js  terminal-utils.test.js  ui-utils.js  ui-utils.test.js
apps/desktop/src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  create_icns.sh  icon.icns
apps/desktop/src-tauri/src/: cli_schema.rs  cli_utils.rs  client.rs  cloud_provider.rs  commands.rs  coverage_ipc.rs  demo.rs  feedback.rs  file_crypto.rs  http_client.rs  individual_views.rs  key_bundle.rs  legal.rs  lib.rs  local_client.rs  macos_file_provider_native.m  macos_file_provider_native.rs  main.rs  mount.rs  process_utils.rs  recovery_artifact.rs  release_notes.rs  session.rs  state.rs  terminal_diagnostics.rs
apps/desktop/src-tauri/src/commands/: file_ops.rs  groups.rs  rekey.rs  settings.rs
apps/desktop/tests/: security-utils.test.js  ui-utils.test.js
crates/cli/: Cargo.toml
crates/cli/src/: error.rs  main.rs  recovery_artifact.rs
crates/cli/src/audit/: file_log.rs  mod.rs
crates/cli/src/commands/: auth.rs  coverage.rs  crypto.rs  devices.rs  diagnostics.rs  file_ops.rs  files.rs  groups.rs  members.rs  mfa.rs  mod.rs  mount.rs  pin.rs  recovery.rs  rekey.rs  sos.rs  trust.rs  welcome.rs
crates/cli/src/security/: membership_signing.rs  memebership_signing_key.json  mod.rs  server_identity.rs  sos_decrypt_unlock_keys.json  transparency.rs  transparency_keys.json  unlock.rs
crates/cli/src/session/: migration.rs  mod.rs  persistence.rs
crates/cli/src/ui/: error.rs  formatting.rs  mod.rs  progress.rs  prompts.rs
crates/cli/tests/: cli_integration.rs
crates/client/: Cargo.toml
crates/client/benches/: client_auth_bench.rs
crates/client/resources/: client_config.toml
crates/client/src/: compression.rs  config_loader.rs  epoch_key_source.rs  errors.rs  errors_test.rs  group.rs  invitation.rs  lib.rs  logging.rs  logging_test.rs  metrics.rs  performance.rs  performance_simple.rs  recovery.rs  resource_management.rs  scalable_groups.rs  welcome_manager.rs
crates/client/src/audit/: mod.rs
crates/client/src/auth/: mod.rs  opaque.rs  registration.rs
crates/client/src/config/: mod.rs  production.rs
crates/client/src/coverage/: folders.rs  log.rs  mod.rs
crates/client/src/epoch/: migration.rs  mod.rs  state.rs  update.rs  welcome.rs
crates/client/src/epoch/cutover/: coordinator.rs  mod.rs
crates/client/src/file/: access.rs  cache.rs  decrypt.rs  encrypt.rs  mod.rs  rewrap.rs  streaming.rs
crates/client/src/ipc/: coverage.rs  coverage_workflows.rs  mod.rs
crates/client/src/network/: mock.rs  mod.rs
crates/client/src/pinning/: mod.rs
crates/client/src/rekey/: api.rs  experimental.rs  mod.rs  production.rs
crates/client/src/security/: mod.rs  validation.rs
crates/client/src/state/: client.rs  migration.rs  mod.rs
crates/client/src/state/client/: coverage_filesystem.rs  files.rs  groups.rs  persistence.rs  security.rs  session.rs  tests.rs  welcome.rs
crates/client/src/state/client/coverage/: background.rs  mod.rs  operations.rs  state.rs  sync.rs
crates/client/src/state/client/rekey/: epoch.rs  heartbeat.rs  mod.rs  operations.rs
crates/client/src/storage/: local_fs.rs  mock.rs  mod.rs
crates/client/src/transparency/: mod.rs
crates/client/tests/: auth_tests.rs  integration.rs  persistence.rs
crates/coverage/: Cargo.toml
crates/coverage/src/: lib.rs
crates/crypto/: Cargo.toml
crates/crypto/benches/: crypto_bench.rs
crates/crypto/src/: account_protection.rs  aead.rs  epoch_id.rs  error.rs  hybridkem.rs  kdf.rs  lib.rs  mlkem_adapter.rs  rekey.rs  secure_delete.rs  secure_memory.rs  signatures.rs  x25519.rs
crates/crypto/tests/: integration.rs
crates/macos-file-provider/: Cargo.toml
crates/macos-file-provider/src/: lib.rs  provider_state.rs
crates/merkle/: Cargo.toml
crates/merkle/benches/: merkle_bench.rs
crates/merkle/src/: lib.rs
crates/messages/: Cargo.toml
crates/messages/src/: cutover.rs  error.rs  file_metadata.rs  group_update.rs  join_card.rs  lib.rs  transparency.rs  welcome.rs
crates/mount/: Cargo.toml
crates/mount-sync/: Cargo.toml
crates/mount-sync/src/: lib.rs  mount_runner.rs
crates/mount/src/: error.rs  lib.rs
crates/mount/src/cache/: chunks.rs  eviction.rs  metadata.rs  mod.rs
crates/mount/src/filesystem/: attr.rs  decrypt.rs  hybridcipher.rs  lookup.rs  mod.rs  performance.rs  read.rs
crates/mount/src/migration/: mod.rs  overlay.rs  rewrap.rs  tracker.rs
crates/mount/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
crates/mount/src/virtual_fs/: mod.rs  overlay.rs  tree.rs
crates/provider-core/: Cargo.toml
crates/provider-core/src/: lib.rs
crates/security/: Cargo.toml
crates/security/src/: attack_simulation.rs  audit.rs  crypto_validator.rs  documentation.rs  errors.rs  hardening.rs  hsm_integration.rs  lib.rs  network_security.rs  operational_security.rs  penetration_testing.rs  runtime_protection.rs  security_validator.rs  static_analyzer.rs  threat_detection.rs  vulnerability_scanner.rs
crates/security/tests/: penetration_testing_tests.rs
crates/windows-cloud-provider/: Cargo.toml
crates/windows-cloud-provider/src/: lib.rs
docs/desktop/: OPEN_SOURCE_VERIFY.md
scripts/macos/: local_desktop_release.sh  public_desktop_verify.sh
scripts/oss/: write_desktop_release_manifest.sh
(+18 files in other folders)
