[workspace]
resolver = "2"
members = [
    "apps/desktop/src-tauri",
    "crates/cli",
    "crates/client",
    "crates/coverage",
    "crates/crypto",
    "crates/macos-file-provider",
    "crates/merkle",
    "crates/messages",
    "crates/mount",
    "crates/mount-sync",
    "crates/provider-core",
    "crates/security",
    "crates/windows-cloud-provider",
]

[workspace.dependencies]
# Cryptography dependencies
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = "2.0"
chacha20poly1305 = "0.10"
sha2 = "0.10"
hkdf = "0.12"
rand_core = "0.6"
rand = "0.8"
rand_chacha = "0.3"
zeroize = { version = "1.7", features = ["derive"] }

# Serialization dependencies
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Error handling and testing
thiserror = "1.0"
proptest = "1.4"
criterion = "0.5"
hex = "0.4"
base64 = "0.22"

# Build tools
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
