[package]
name = "hybridcipher-cli"
version = "0.1.0"
edition = "2021"
authors = ["HybridCipher Team"]
description = "Command-line interface for HybridCipher encrypted file sharing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hybridcipher/hybridcipher"
readme = "../../README.md"
keywords = ["cryptography", "cli", "hybridcipher"]
categories = ["cryptography", "command-line-utilities"]

[features]
default = []
individual-edition = []

[[bin]]
name = "hybridcipher"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.0", features = ["derive", "color", "help", "usage", "error-context"] }
clap_complete = "4.0"

# Error handling and user experience
color-eyre = "0.6"
eyre = "0.6"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# User interface
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
colored = "2.0"
once_cell = "1.19"
tracing = "0.1"
async-trait = "0.1"

# Cryptography and security
secrecy = "0.8"
sha2 = "0.10"
hex = "0.4"
argon2 = "0.5"
zeroize = { workspace = true }
opaque-ke = { version = "3.0", features = ["ristretto255"] }

# Security and crypto
rpassword = "7.0"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_yaml = "0.9"
toml = "0.8"
base64 = "0.21"
bincode = "1.3"
num-bigint = "0.4"
qrcode = "0.12"
hkdf = { workspace = true }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# System integration
directories = "5.0"
dirs = "5.0"
which = "5.0"
notify = "6.1"

# Additional dependencies
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"
urlencoding = "2.1"
filetime = "0.2"

# Internal dependencies
hybridcipher-client = { path = "../client" }
hybridcipher-crypto = { path = "../crypto" }
hybridcipher-coverage = { path = "../coverage" }
hybridcipher-messages = { path = "../messages" }
hybridcipher-merkle = { path = "../merkle" }
hybridcipher-mount-sync = { path = "../mount-sync" }

# Platform-specific keystore support
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6", features = ["linux-native"] }
hybridcipher-mount = { path = "../mount" }

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
