[package]
name = "hybridcipher-client"
version = "0.1.0"
edition = "2021"
description = "HybridCipher client implementation with OPAQUE-PAKE authentication"
authors = ["HybridCipher Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hybridcipher/hybridcipher"
readme = "../../README.md"
keywords = ["cryptography", "client", "hybridcipher"]
categories = ["cryptography", "network-programming"]

[features]
experimental-security = []
bench = []
mount-fs = []

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full", "sync"] }
futures = "0.3"

# Filesystem watchers
notify = "6"

# Cryptography
hybridcipher-crypto = { path = "../crypto" }
hybridcipher-messages = { path = "../messages" }
hybridcipher-coverage = { path = "../coverage" }
hybridcipher-merkle = { path = "../merkle" }
opaque-ke = "3.0"
argon2 = "0.5"
rand = "0.8"
rand_chacha = "0.3"
zeroize = { version = "1.0", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
serde_bytes = "0.11"
ciborium = "0.2"
toml = "0.8"

# Utilities
hex = "0.4"
once_cell = "1.19"
walkdir = "2.5"
filetime = "0.2"
glob = "0.3"

# QR Code generation for key pinning
qrcode = "0.14"
base64 = "0.22"
urlencoding = "2.1"

# Async traits
async-trait = "0.1"

# Storage
sled = "0.34"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP client for Welcome message fetching
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Logging
log = "0.4"

# Time and hashing
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hkdf = "0.12"
uuid = { version = "1.18.0", features = ["v4", "v5", "serde"] }

# Performance and scaling
lru = "0.12"
rayon = "1.8"
num_cpus = "1.16"

# Compression
flate2 = "1.0"

[dev-dependencies]
tempfile = "3.0"
criterion = "0.5"

[[bench]]
name = "client_auth_bench"
harness = false
required-features = ["bench"]
