[package]
name = "hybridcipher-crypto"
version = "0.1.0"
edition = "2021"
authors = ["HybridCipher Team"]
description = "Core cryptographic primitives for HybridCipher"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hybridcipher/hybridcipher"
readme = "../../README.md"
keywords = ["cryptography", "security", "hybridcipher"]
categories = ["cryptography", "algorithms"]

[features]
default = ["std"]
std = []

[dependencies]
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
rand_core = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
uuid = { version = "1.8", default-features = false, features = ["serde"] }
aws-lc-rs = { version = "1.17.0", default-features = false, features = ["aws-lc-sys", "alloc"] }
aws-lc-sys = "0.39.0"

# Secure memory dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["memoryapi", "errhandlingapi", "winbase", "winnt"] }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
rand_core = { workspace = true, features = ["getrandom"] }
hex = "0.4"

[[bench]]
name = "crypto_bench"
harness = false
