[package]
name = "hybridcipher-messages"
version = "0.1.0"
edition = "2021"
authors = ["HybridCipher Team"]
description = "Message serialization and validation for HybridCipher"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hybridcipher/hybridcipher"
readme = "../../README.md"
keywords = ["cryptography", "serialization", "hybridcipher"]
categories = ["cryptography", "network-programming"]

[dependencies]
hybridcipher-crypto = { path = "../crypto" }
serde = { workspace = true }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
ciborium = "0.2"
rand_chacha = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
