[package]
name = "hybridcipher-mount"
version = "0.1.0"
edition = "2021"
authors = ["HybridCipher Team"]
description = "FUSE filesystem implementation for HybridCipher with migration support"
license = "MIT"
repository = "https://github.com/hybridcipher/hybridcipher"
readme = "../../README.md"
keywords = ["cryptography", "filesystem", "hybridcipher"]
categories = ["cryptography", "filesystem"]

[dependencies]
base64 = { workspace = true }
libc = "0.2"
tokio = { version = "1.0", features = ["full"], optional = true }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.0"
lru = "0.12"
uuid = { version = "1.0", features = ["v4", "serde"] }
dashmap = "5.0"
parking_lot = "0.12"
memmap2 = "0.9"
chrono = { version = "0.4", features = ["serde"] }
which = "5.0"
sysinfo = "0.30"
notify = "6.1"

# Internal dependencies
hybridcipher-client = { path = "../client", features = ["mount-fs"] }
hybridcipher-crypto = { path = "../crypto" }
hybridcipher-messages = { path = "../messages" }
hybridcipher-coverage = { path = "../coverage" }

[target.'cfg(target_os = "macos")'.dependencies]
fuser = { version = "0.16", features = ["libfuse"] }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
fuser = "0.16"
nix = { version = "0.27", features = ["fs"] }

[dev-dependencies]
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"

[features]
default = ["async"]
async = ["tokio"]
tracing-debug = ["tracing/max_level_debug"]
