[package]
name = "hybridcipher-provider-core"
version = "0.1.0"
edition = "2021"
authors = ["HybridCipher Team"]
description = "Shared provider boundary for HybridCipher native filesystem integrations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hybridcipher/hybridcipher"
readme = "../../README.md"
keywords = ["cryptography", "filesystem", "provider", "hybridcipher"]
categories = ["cryptography", "filesystem"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
hybridcipher-client = { path = "../client" }
hybridcipher-mount-sync = { path = "../mount-sync" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.0"
