[package]
name = "hybridcipher-security"
version = "0.1.0"
edition = "2021"
description = "Security audit framework and threat detection for HybridCipher"
authors = ["HybridCipher Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hybridcipher/hybridcipher"
readme = "../../README.md"
keywords = ["security", "audit", "hybridcipher"]
categories = ["cryptography", "security"]

[features]
experimental-security = []

[dependencies]
# Security and cryptography
rand = "0.8"
sha2 = "0.10"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Pattern matching
regex = "1.0"

# Logging
tracing = "0.1"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }
