[package]
name = "hybridcipher-desktop"
version = "0.1.3" # this will be syncd to the version in tauri.conf.json during build
edition = "2021"
authors = ["HybridCipher Team"]
description = "Cross-platform desktop application for HybridCipher encrypted file sharing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hybridcipher/hybridcipher"
readme = "../../README.md"
keywords = ["cryptography", "desktop", "tauri", "hybridcipher"]
categories = ["cryptography", "gui"]

[build-dependencies]
cc = "1.2.33"
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-updater = "2.0"
ctrlc = "3.4"

# HybridCipher workspace crates
hybridcipher-client = { path = "../../../crates/client" }
hybridcipher-crypto = { path = "../../../crates/crypto" }
hybridcipher-messages = { path = "../../../crates/messages" }
hybridcipher-security = { path = "../../../crates/security" }
hybridcipher-mount-sync = { path = "../../../crates/mount-sync" }
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Security
zeroize = { workspace = true }
secrecy = "0.8"
argon2 = "0.5"
hkdf = "0.12"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
filetime = "0.2"
whoami = "1.5"
sha2 = "0.10"
rand = "0.8"
dirs = "5.0"
directories = "5.0"
dunce = "1.0"
walkdir = "2.5"
notify = "6.1"
which = "6.0"
portable-pty = "0.8"
opaque-ke = { version = "3.0", features = ["ristretto255"] }
once_cell = "1.19"
md5 = "0.7"
qrcode = "0.14"
shell-words = "1.1"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6", features = ["apple-native"] }
hybridcipher-macos-file-provider = { path = "../../../crates/macos-file-provider" }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6", features = ["windows-native"] }
hybridcipher-windows-cloud-provider = { path = "../../../crates/windows-cloud-provider" }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6", features = ["linux-native"] }

[dev-dependencies]
tempfile = "3.8"

[features]
# Enable additional macOS-specific features
custom-protocol = ["tauri/custom-protocol"]
individual-edition = []
